# NV-Generate-CTMR

./: .gitignore  inference_tutorial.ipynb  pod_start_script.sh  pyproject.toml
configs/: config_infer_16g_256x256x128.json  config_infer_80g_512x512x512.json
scripts/: .gitignore  combine_labelmaps.py  compare_states.py  convert_ts_seg_to_maisi.py  heart_to_dataset_location.py  merge_segmentations.py  outpaint_inference.py  preprocess.py  segmentation_utils.py  utils.py
